# insta-api

./: .dockerignore  Dockerfile  README.md  api.py  core.py  data_sample.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  ruff.toml  server.py
playwright-browser/: main.py
shared/logging/: __init__.py  formatters.py  handler.py
user_data/: Local State  SingletonCookie  SingletonLock  SingletonSocket
user_data/Default/: .com.google.Chrome.ovDpre  Favicons-journal  History  History-journal  MediaDeviceSalts  Network Persistent State  Preferences  README  Web Data
user_data/Default/Cache/Cache_Data/: 4e7c20d3b21accef_0  51824678091275ca_0  5b3041a479254970_0  5bc732bfe87bec05_0  (+4 more)
user_data/Default/DawnGraphiteCache/: index
user_data/Default/DawnWebGPUCache/: index
user_data/Default/Extension Rules/: LOG  LOG.old
user_data/Default/Extension Scripts/: LOG  LOG.old
user_data/Default/Extension State/: LOG  LOG.old
user_data/Default/GPUCache/: data_0  data_1  data_2  index
user_data/Default/Platform Notifications/: LOG  LOG.old
user_data/Default/Session Storage/: LOG  LOG.old
user_data/Default/Sessions/: Session_13403382414342702  Session_13403382650592406  Tabs_13403382294969629
user_data/Default/Site Characteristics Database/: LOG  LOG.old
user_data/Default/WebStorage/: QuotaManager  QuotaManager-journal
user_data/Default/shared_proto_db/: LOG  LOG.old
user_data/GrShaderCache/: data_0  data_1  index
user_data/GraphiteDawnCache/: index
user_data/ShaderCache/: index
user_data/segmentation_platform/: ukm_db
(+17 files in other folders)
