[project]
name = "insta-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.24.0",
    "instaloader>=4.14.2",
    "playwright>=1.55.0",
    "attrs>=25.3.0",
    "cattrs[orjson]>=25.2.0",
    "loguru>=0.7.3",
]
